@@ -219,6 +219,14 @@ Brandy_xxx  (SWI numbers start &140000)
                                 event queue length is used (7 events) which
                                 mirrors RISC OS behaviour.
 
+&140014 Brandy_dlgetaddr        Fetches the address of the library function
+                                call given in R0, and returns the address
+                                in R0.
+
+&140015 Brandy_dlcalladdr       Similar to Brandy_dlcall (above), but takes
+                                the address of the symbol in R0 instead of
+                                the symbol name.
+
 
 RaspberryPi_xxx (SWI numbers start &140100)
  -- see also docs/raspi-gpio.txt
