@@ -129,6 +129,8 @@ typedef struct {
 #define SWI_Brandy_Platform				0x140011
 #define SWI_Brandy_RefreshInterval			0x140012
 #define SWI_Brandy_MouseEventExpire			0x140013
+#define SWI_Brandy_dlgetaddr				0x140014
+#define SWI_Brandy_dlcalladdr				0x140015
 
 #define SWI_RaspberryPi_GPIOInfo			0x140100
 #define SWI_RaspberryPi_GetGPIOPortMode			0x140101
@@ -219,6 +221,8 @@ static switable swilist[] = {
 	{SWI_Brandy_Platform,				"Brandy_Platform"},
 	{SWI_Brandy_RefreshInterval,			"Brandy_RefreshInterval"},
 	{SWI_Brandy_MouseEventExpire,			"Brandy_MouseEventExpire"},
+	{SWI_Brandy_dlgetaddr,				"Brandy_dlgetaddr"},
+	{SWI_Brandy_dlcalladdr,				"Brandy_dlcalladdr"},
 
 	{SWI_RaspberryPi_GPIOInfo,			"RaspberryPi_GPIOInfo"},
 	{SWI_RaspberryPi_GetGPIOPortMode,		"RaspberryPi_GetGPIOPortMode"},
